social media link updated

--- a/index.html
+++ b/index.html
@@ -277,12 +277,12 @@
       <div class="social-media-section">
         <h3>Social Media</h3>
         <div class="social-media">
-          <a href="https://instagram.com" target="_blank"
+          <a href="https://www.instagram.com/dlightagency_/?hl=en" target="_blank"
             ><i class="fab fa-instagram"></i
           ></a>
         
         </a>
-          <a href="https://linkedin.com" target="_blank"
+          <a href="https://www.linkedin.com/in/dlight-agency-3a1ba132a/" target="_blank"
             ><i class="fab fa-linkedin"></i
           ></a>
         </div>
