--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       </div>
 
       <nav>
+        <div class="hamburger" onclick="toggleMenu()">☰</div> 
         <ul>
           <li>
             <a href="#introduction"
