--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <div class="logo-container">
         <a href="index.html">
-          <img src="/images/d.png" alt="Logo Image" class="header-image" />
+          <img src="/images/sp.png" alt="Logo Image" class="header-image" />
         </a>
       </div>
       <div id="loading-screen" class="loading">
