--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>D-light - Home</title>
+    <link rel="icon" href=
+"/images/sp.png"
+        type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link
@@ -80,10 +83,10 @@
       <!-- Introduction Section -->
       <section id="introduction" class="image-section">
         <div class="content">
-          <h2>D Light Agency</h2>
-          <h3>
+          <h1>D Light Agency</h1>
+          <h2>
             Your Creative Partner in Social Media and Branding Success
-          </h3>
+          </h2>
           <p></p>
           <p>We bring your brand vision to life with expert social media management, innovative design, and creative marketing solutions.</p>
         </div>
@@ -94,7 +97,7 @@
 
      <!-- Company Overview Section -->
 <section id="company-overview" class="image-section">
-  <h2>Company Overview</h2>
+  <h1>Company Overview</h1>
   <div class="overview-content">
     <div class="text-content">
       <div class="about-container">
@@ -129,7 +132,7 @@
       <!-- Our Expertise Section -->
       <section id="our-expertise" class="image-section">
         <div class="content">
-          <h2>Our Expertise</h2>
+          <h1>Our Expertise</h1>
           <p>
             We begin by researching your industry and audience to create a tailored strategy.</p>  <p>Our creative team crafts visually stunning designs that
             captivate your audaince.</p> <p> We handle your social media to increase
@@ -137,9 +140,7 @@
             refine and optimize our effort.</p>
           </p>
         </div>
-        <div class="image-container">
-          <img src="/images/pa.png" alt="Our Approach Image" />
-        </div>
+     
       </section>
 
       <!-- Team Expertise Section
@@ -159,7 +160,7 @@
 
       <!-- Our Features Section -->
       <section class="features">
-        <h2 class="section-header">Our Features</h2>
+        <h1 class="section-header">Our Features</h1>
         <div class="feature-grid">
           <div class="feature">
             <i class="fas fa-paint-brush"></i>
