--- a/P_sm.html
+++ b/P_sm.html
@@ -3,6 +3,9 @@
   <head>
     <link rel="stylesheet" href="css/price.css" />
     <title>P.Social Media Management </title>
+    <link rel="icon" href=
+"/images/sp.png"
+        type="image/x-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link
       rel="stylesheet"
@@ -36,29 +39,24 @@
  
       <ul>
         <li>
-          <a href="#introduction"
+          <a href="index.html#introduction"
             ><i class="fas fa-info-circle"></i>
             <p>Home</p></a
           >
         </li>
         <li>
-          <a href="#company-overview"
+          <a href="index.html#company-overview"
             ><i class="fas fa-building"></i>
             <p>About Us</p></a
           >
         </li>
         <li>
-          <a href="#our-approach"
+          <a href="index.html#our-expertise"
             ><i class="fas fa-cogs"></i>
             <p>Our Expertise</p></a
           >
         </li>
-        <li>
-          <a href="index.html/#our-expertise"
-            ><i class="fas fa-users"></i>
-            <p>Our Expertise</p></a
-          >
-        </li>
+        
         <li class="dropdown">
           <a href="#pricing" class="dropdown-toggle">Pricing <i class="fa fa-caret-down"></i></a>
           <div class="dropdown-content">
