--- a/index.html
+++ b/index.html
@@ -96,38 +96,37 @@
       </section>
 
      <!-- Company Overview Section -->
-<section id="company-overview" class="image-section">
-  <h1>Company Overview</h1>
+<section id="company-overview" >
+  <h1>Bringing Creativity and Strategy Together</h1>
   <div class="overview-content">
-    <div class="text-content">
-      <div class="about-container">
-        <h3>About</h3>
-        <p>
-          We are a dedicated team passionate about delivering innovative solutions tailored to meet your needs. Our focus is on enhancing your brand’s identity and achieving tangible results.
-        </p>
+    <div class="story">
+        <h3 class="Story">Our Story:</h3>
+        <p >D-Light Agency was founded to help businesses stand out in a crowded digital market. We saw many brands struggle despite their potential, lacking the right visuals or content to connect effectively.</p>
+        <p>  Our mission is to offer a strategic, creative approach that goes beyond designs and captions.</p>
+        <p> We partner with clients, guiding them through branding, marketing, and social media to unlock their full potential.</p> 
       </div>
-      <div class="mission-vision-container">
-        <div class="mission">
-          <h3>Mission</h3>
-          <p>
-            Our mission is to empower businesses with creative strategies that drive growth and foster engagement. We strive to deliver value through innovative approaches and exceptional service.
-          </p>
-        </div>
-        <div class="vision">
-          <h3>Vision</h3>
-          <p>
-            Our vision is to be a leader in the branding and design industry, recognized for our creativity and commitment to excellence. We envision a world where brands connect meaningfully with their audiences.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="image-container">
-      <img src="/images/overview.jpg" alt="Company Overview Image" />
-    </div>
+        <div class="three">
+<div class="mvc">
+   <div> 
+    <h3>Our vision:</h3> 
+    <p>To empower businesses through creative strategies that build lasting connections and drive measurable growth.</p>
+   </div>
+   <div>
+    <h3>Our Mission:</h3>
+    <p>To provide innovative, tailor-made solutions that elevate brands and help them stand out in a competitive market.</p>
   </div>
+  <div>
+    <h3>Core Values:</h3>
+    <ul><li>Creativity: We push the boundaries of innovation to craft solutions that captivate and inspire.</li>
+      <li>Collaboration: We work closely with our clients, treating every project as a partnership.</li>
+      <li>Excellence: Our attention to detail ensures that every project we deliver meets the highest standards of quality.</li>
+      <li>Integrity: We believe in transparent, honest communication and building long-lasting relationships.</li></ul>
+  </div>
+</div>
+
+  </div>
+      </div>
 </section>
-
-
 
       <!-- Our Expertise Section -->
       <section id="our-expertise" class="image-section">
@@ -142,21 +141,6 @@
         </div>
      
       </section>
-
-      <!-- Team Expertise Section
-      <section id="team-expertise" class="image-section">
-        <div class="image-container">
-          <img src="images/Team.jpg" alt="Team Expertise Image" />
-        </div>
-        <div class="content">
-          <h2>Team Expertise</h2>
-          <p>
-            Our team is composed of industry experts with a diverse range of
-            skills, ensuring we meet every challenge with the right knowledge
-            and tools.
-          </p>
-        </div>
-      </section> -->
 
       <!-- Our Features Section -->
       <section class="features">
@@ -272,26 +256,32 @@
     </main>
 
     <footer>
-      <div class="social-media-section">
-        <h3>Social Media</h3>
-        <div class="social-media">
-          <a href="https://www.instagram.com/dlightagency_/?hl=en" target="_blank"
-            ><i class="fab fa-instagram"></i
-          ></a>
-        
-        </a>
-          <a href="https://www.linkedin.com/in/dlight-agency-3a1ba132a/" target="_blank"
-            ><i class="fab fa-linkedin"></i
-          ></a>
-        </div>
+      <div class="footer-container">
+          <div class="social-media-section">
+              <h3>Follow Us</h3>
+              <div class="social-media">
+                  <a href="https://www.instagram.com/dlightagency_/?hl=en" target="_blank">
+                      <i class="fab fa-instagram"></i>
+                  </a>
+                  <a href="https://www.linkedin.com/in/dlight-agency-3a1ba132a/" target="_blank">
+                      <i class="fab fa-linkedin"></i>
+                  </a>
+              </div>
+          </div>
+          <div class="contact-info">
+              <h3>Contact Us</h3>
+              <p>
+                <i class="fas fa-envelope"></i>
+                <a href="mailto:hello.dlightagency@gmail.com" style="color: white;">hello.dlightagency@gmail.com</a>
+            </p>
+              <p>
+                <i class="fas fa-phone"></i>
+                <a href="tel:+2348118344550" style="color: white;">+234 8118344550</a>
+            </p>
+              <p><i class="fas fa-map-marker-alt"></i> 5 Jerry Iriabe Street, Lekki Phase 1, Lagos</p>
+          </div>
       </div>
-      <div class="contact-info">
-        <p>Email: hello.dlightagency@gmail.com</p>
-        <p>Phone: +234 8118344550</p>
-        <p>Address: 5 Jerry Iriabe street, Lekki Phase 1, Lagos.</p>
-
-      </div>
-    </footer>
+  </footer>
     <script src="script.js"></script>
   </body>
 </html>
